--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "node-sass": "^5.0.0"
   }
 }
